2006-08-21	Paul Biggar	<paul.biggar@gmail.com>
	* ipa-stack-allocate.c: Removing comments.

2006-08-20	Paul Biggar	<paul.biggar@gmail.com>

	* timevar.def (TV_IPA_STACK_ALLOCATE): New.
	* ipa-stack-allocate.h: Changed first line comment.
	(process_function): Add code generation of alloca; remove comments
	and debugging
	(execute_ipa_stack_allocate): rename from execute_stack_allocate;
	new indentation and comments
	(gate_ipa_stack_allocate): made conditional on
	flag_ipa_stack_allocate
	 
2006-08-18	Paul Biggar	<paul.biggar@gmail.com>

	* ipa-stack-allocate.c: Rename from tree-ssa-escape.c
	* (execute_stack_allocate): Rename from execute_escape
	* (gate_ipa_escape): Rename from gate_ipa_stack_allocate
	
	* tree-pass.h (pass_ipa_stack_allocate):
	* ipa-stack-allocate.c (pass_ipa_stack_allocate):
	* passes.c (pass_ipa_stack_allocate): Rename from pass_ipa_escape

	* common.opt (fipa-stack-escape): New option
	* Makefile.in (ipa-stack-allocate): New rule

2006-08-17	Paul Biggar	<paul.biggar@gmail.com>

	* congraph.c: New file
	* congraph.h, congraph.c, tree-ssa-escape.c (con_node) <LOCAL>
	<OBJECT, FIELD, GLOBAL, RETURN, CALLEE_ACTUAL, CALLER_ACTUAL>:
	Changed int con_node->type to enum con_node_type

	* congraph.h, congraph.c, tree-ssa-escape.c (con_edge)
	<POINTS-TO, DEFERRED, FIELD>: Changed int con_edge->type to
	enum con_edge_type

	* congraph.h, congraph.c, tree-ssa-escape.c (con_node)
	<NO_ESCAPE, ARG_ESCAPE, GLOBAL_ESCAPE>: Changed int
	con_node->escape to enum ea_escape_type

	* congraph.h, congraph.h (new_con_graph): Removed arg
	num_basic_block
	* congraph.h, congraph.h (con_graph): Removed field
	block_iteration_count, dirty
	* congraph.h, congraph.h: Removed functions reset_dirty,
	is_dirty, increment_iteration_count, get_iteration_count,
	reset_iteration_count

	* congraph.h, congraph.c: Removed functions update_nodes,
	in_maps_to_obj, add_to_maps_to_obj

	* congraph.h (con_node, con_edge): Updated comments
