@@ -26,28 +26,7 @@ Software Foundation, 51 Franklin Street, Fifth Floor, Boston, MA
 #include "config.h"
 #include "system.h"
 #include "coretypes.h"
-#include "tm.h"
-#include "tree.h"
-#include "tm_p.h"
-#include "hard-reg-set.h"
-#include "timevar.h"
-#include "expr.h"
-#include "ggc.h"
-#include "langhooks.h"
-#include "flags.h"
-#include "function.h"
 #include "diagnostic.h"
-#include "tree-dump.h"
-#include "tree-gimple.h"
-#include "tree-flow.h"
-#include "tree-inline.h"
-#include "tree-pass.h"
-#include "tree-ssa-structalias.h"
-#include "convert.h"
-#include "params.h"
-#include "ipa-type-escape.h"
-#include "vec.h"
-#include "bitmap.h"
 
 
 enum con_node_type
